[package]
name = "distance-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
async-trait = "0.1.68"
dotenv = "0.15.0"
futures = "0.3.28"
hostname = "0.3.1"
itertools = "0.10.5"
moka = { version = "0.10.2", features = ["future"] }
paperclip = { version = "0.8.0", features = ["actix4", "paperclip-actix", "swagger-ui"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_valid = "0.15.0"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-actix", "runtime-actix-native-tls"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
